package se.hkr.andriod.domain.model.device

enum class DeviceType {
    LIGHT,
    LOCK,
    SENSOR,
    GAS,
    STEAM,
    HUMIDITY,
    BUZZ,
    FAN,
    SERVO,
    WINDOW,
    DOOR,
    DISPLAY,
    PHOTO,
    BRIGHTNESS,
    MOTION,
    TEMPERATURE,
    TILT,
    BUTTON,
    DISTANCE,
    UNKNOWN,
}
