package se.hkr.andriod.domain.model.device

data class Room(
    val id: String,
    val name: String
)
